--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.10.10",
-    "git-commit-msg-linter": "^5.0.8",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard-with-typescript": "^11.0.1",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-node": "^9.2.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "git-commit-msg-linter": "^2.3.11",
     "typescript": "^5.7.3"
   }
 }
